Stretch fix

--- a/style.css
+++ b/style.css
@@ -44,25 +44,20 @@ body {
     min-height: 100vh;
     background-color: pink;
     font-family: "Edu NSW ACT Cursive", cursive, Verdana, Geneva, Tahoma, sans-serif;
-}
-
-
-/* Base styles */
-body {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 /* Larger screens */
 @media (min-width: 992px) {
   body {
-    font-size: 18px;
+    font-size: 20px;
   }
 } 
 
 /* Smaller tablets and mobiles */
 @media (max-width: 768px) {
   body {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -173,7 +168,7 @@ nav a img {
     min-height: 50vh;  
 }
 
-.cards content-wrapper {
+.cards {
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
@@ -184,7 +179,7 @@ nav a img {
 .cards article {
     display: flex;
     flex-wrap: wrap;
-    width: 125px;
+    width: 30%;
     flex: 1 1 auto;
     margin: 3% 3%;
     border-radius: 15px 25px 25px 5px;
@@ -192,6 +187,14 @@ nav a img {
     background-color: aliceblue;
     color: orchid;
 }
+
+/* Larger screens */
+@media (min-width: 992px) {
+  .cards article {
+    width: 20%;
+  }
+} 
+
 
 .cards article a {
     text-decoration: none
@@ -202,6 +205,7 @@ nav a img {
     border-radius: 15px 25px 25px 5px;
     box-shadow: 4px 4px 4px rgba(218, 112, 214, 7.5);
 }
+
 
 .cards article img {
     border-radius: 15px 25px 25px 0px;
@@ -217,7 +221,6 @@ nav a img {
 .cards article p {
     text-align: center;
     padding: 5% 5%;
-    tex
 }
 
 footer {
